--- a/index.html
+++ b/index.html
@@ -1,68 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Wycliffe Musinguzi | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>John Wycliffe Musinguzi</h1>
-            <p class="subtitle">Sports Journalist • Writer • Media Officer</p>
+<header>
+    <div class="container">
+        <div class="profile-container">
+            <img src="profile.jpg" alt="John Wycliffe Musinguzi" class="profile-pic">
         </div>
-    </header>
-
-    <section class="profile">
-        <div class="container">
-            <h2>Profile</h2>
-            <p><strong>Born:</strong> August 16, 2006, Mulago, Kampala, Uganda</p>
-            <p>John Wycliffe Musinguzi is a Ugandan sports journalist, writer, and media officer known for his dynamic coverage of school sports and football across national and continental platforms. Emerging as one of Africa’s most promising young media talents, he has already reported from major tournaments including the TotalEnergies CAF African Nations Championship 2024 and the CAF Africa Schools Football Championships.</p>
-        </div>
-    </section>
-
-    <section class="early-life">
-        <div class="container">
-            <h2>Early Life & Education</h2>
-            <p>Born in Mulago Hospital and raised primarily in Fort Portal, John grew up under the care of his grandmother, Oliva Tibasaga, and his uncle, James Kisembo, alongside his sister Patience Kanweri. His initial schooling laid the foundation for his later passion in media.</p>
-            <p>John’s interest in journalism was nurtured through capacity-building programs such as the Uganda Secondary Schools Sports Association (USSSA) training and the CAF Young Reporters Program, where he gained hands-on skills in reporting, media operations, and digital storytelling.</p>
-        </div>
-    </section>
-
-    <section class="career">
-        <div class="container">
-            <h2>Career Development</h2>
-            <p>John began his sports journalism journey in 2021, during the global COVID-19 lockdown, at just 16 years old. He first gained experience contributing to Jubilee FM while still in school, demonstrating a rare blend of initiative and talent at an early age.</p>
-            <p>In February 2023, he joined Life FM (Uganda), significantly expanding his professional network and exposure within the Ugandan sports media landscape.</p>
-            <p>His career took a major leap forward through his participation in the CAF Young Reporters Training Program. By 2025, John had honed his craft alongside seasoned journalists, covering major continental events and refining his abilities in broadcast and digital journalism.</p>
-            <p>Despite balancing school commitments with his burgeoning media career, John’s reporting at the CHAN PAMOJA 2024 showcased his ability to deliver insightful analysis and professional interviews on an international stage.</p>
-        </div>
-    </section>
-
-    <section class="specializations">
-        <div class="container">
-            <h2>Specializations & Impact</h2>
-            <ul>
-                <li><strong>Football and School Sports Coverage:</strong> Youth football leagues, school competitions, regional tournaments.</li>
-                <li><strong>Digital Media & Storytelling:</strong> Using digital platforms to elevate grassroots sports reporting.</li>
-                <li><strong>Youth Empowerment:</strong> Advocating for young African journalists and athletes.</li>
-            </ul>
-        </div>
-    </section>
-
-    <section class="vision">
-        <div class="container">
-            <h2>Personal Vision & Legacy</h2>
-            <p>John views his journey not merely as personal achievement, but as inspiration for young Africans pursuing careers in media. He credits his success to perseverance, mentorship, and faith, and he aspires to continue contributing to African sports journalism—ultimately working as a Media Officer at CAF or within major international sports media platforms.</p>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2026 John Wycliffe Musinguzi | All Rights Reserved</p>
-        </div>
-    </footer>
-</body>
-</html>
+        <h1>John Wycliffe Musinguzi</h1>
+        <p class="subtitle">Sports Journalist • Writer • Media Officer</p>
+    </div>
+</header>
