updated picture jpg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <div class="container">
         <div class="profile-container">
-            <img src="profile.jpg" alt="John Wycliffe Musinguzi" class="profile-pic">
+            <img src="img/wyc.jpeg" alt="John Wycliffe Musinguzi" class="profile-pic">
         </div>
         <h1>John Wycliffe Musinguzi</h1>
         <p class="subtitle">Sports Journalist • Writer • Media Officer</p>
