updated pictures in the body

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <section class="early-life">
         <div class="container">
+            <div class="container">
+            <div class="profile-body-container">
+            <img src="img/wyc1.jpeg" alt="John Wycliffe Musinguzi" class="profile-body-pic">
+        </div>
             <h2>Early Life & Education</h2>
             <p>Born in Mulago Hospital and raised primarily in Fort Portal, John grew up under the care of his grandmother, Oliva Tibasaga, and his uncle, James Kisembo, alongside his sister Patience Kanweri. His initial schooling laid the foundation for his later passion in media.</p>
             <p>John’s interest in journalism was nurtured through capacity-building programs such as the Uganda Secondary Schools Sports Association (USSSA) training and the CAF Young Reporters Program, where he gained hands-on skills in reporting, media operations, and digital storytelling.</p>
@@ -37,6 +41,9 @@
 
     <section class="career">
         <div class="container">
+            <div class="profile-body-container">
+            <img src="img/wyc2.jpeg" alt="John Wycliffe Musinguzi" class="profile-body-pic">
+        </div>
             <h2>Career Development</h2>
             <p>John began his sports journalism journey in 2021, during the global COVID-19 lockdown, at just 16 years old. He first gained experience contributing to Jubilee FM while still in school, demonstrating a rare blend of initiative and talent at an early age.</p>
             <p>In February 2023, he joined Life FM (Uganda), significantly expanding his professional network and exposure within the Ugandan sports media landscape.</p>
